[package]
name = "gnostr_chat"
version = "0.0.1"
authors = ["gnostr-org"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"
description = "WASM ratatui with egui works with bevy and macroquad and eframe"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gold-silver-copper/egui_ratatui"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gnostr-chat"
path = "src/main.rs"

[dependencies]
bevy = "0.14.1"
bevy_egui = "0.30.0"
clap = { version = "4.5.31", features = ["derive", "env"] }
eframe = "0.27"
egui = { version = "0.29", default-features = false }
env_logger = "0.11" # Use the latest version
futures = "0.3.30"
hostname = "0.3.1"
libp2p = { version = "0.54.1", features = [                                      
  "tokio",                                                                       
  "gossipsub",                                                                   
  "mdns",                                                                        
  "noise",                                                                       
  "macros",                                                                      
  "tcp",                                                                         
  "yamux",                                                                       
  "quic",                                                                        
] }

log = "0.4" # log is needed as well
once_cell = "1.19.0"
ratatui = { version = "0.29", default-features = false }
serde = { version = "1", features = ["derive"] }

serde_json = "1.0.114"

tokio = { version = "1", features = ["full"] }                                   
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tui-input = "0.11.1"

ureq = { version = "2", features = ["json", "charset"] }
web-time = { version = "1" }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
